src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@media screen and (min-width: 1200px) and (max-width: 1600px) {
  body {
    zoom: 0.75
  }
}

::-webkit-scrollbar {
  width: 16px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  height: 56px;
  border-radius: 8px;
  border: 4px solid transparent;
  background-clip: content-box;
  background-color: #bcbcbc;
}

#sidebar::-webkit-scrollbar {
  width: 0;
}

#sidebar:hover::-webkit-scrollbar {
  width: 16px;
}

#videoDetailPlayer iframe {
  width: 100%;
}

#channelSectionsMenu::-webkit-scrollbar {
  height: 0;
}

